Document String hash selection and benchmark